# AffiliationModel

./: README.md  TerminatingTerrorismP3.ipynb  __init__.py  clusters.py  pyproject.toml  testingnb.ipynb
src/: INFP3.py  __init__.py
src/affmodel/: Introp4.py  __main__.py  clusters.py  edap4.py  infp4.py
