[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "AffiliationModel"
authors = [
    {name = "Benyamin Besthof", email = "bbesthof@mail.yu.edu"},
]
maintainers = [
    {name = "Benyamin Besthof"},
]
description = "Introduction, Exploraty Data Analysis, Inferences and Insights, and Predictive Model."
readme = "README.md"
keywords = ["python", "summary", "EDA", "model" ]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "seaborn>=0.13.0",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.3",
    
]
version= "0.1.0" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"package" = ["*"]
